# fiction-readers

./: .gitignore  pyproject.toml
data/: authors.csv  books.csv  genres.csv  publishers.csv  reviews.csv
etl/: README.md  fiction.ipynb  reviews.ipynb
