[tool.poetry]
name = "final-project"
version = "0.1.0"
description = ""
authors = ["karencfisher <karen@karencfisher.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
openai = "^1.53.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
